----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-01-27 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug 884606, MySQL version check before server choice

2004-01-26 Robin Johnson <robbat2@users.sourceforge.net>
    * libraries/dbi/mysql.dbi.lib.php: Correct the default parameter for
    PMA_DBI_insert_id($link = '') and convert file back to UNIX linefeeds.

2004-01-25 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_row_delete.php: bug 882695, broken row highlighting
    * libraries/display_tbl.lib.php: bug 879792, bad sort link
    * libraries/dbi/*: PMA_DBI_num_fields()

2004-01-24 Marc Delisle  <lem9@users.sourceforge.net>
    * querywindow.php: PMA_DBI_close() instead of DBI_close()
    * Documentation.html: clarify FAQ 6.21
    * libraries/dbi/*: use generic $strCantLoad message
    * lang/*: remove $strCantLoadMySQL message
    * libraries/dbi/mysqli.dbi.lib.php: @ before connect to avoid the
      display of unwanted error messages
    * libraries/relation.lib.php: PMA_DBI_fetch_row() instead of fetch_assoc()

2004-01-23 Alexander M. Turek  <foreveryoung@derrabus.de>
    * header_printview.inc.php:
      - Don't bypass $cfg['Server']['verbose'] settings;
      - Include MySQL version in SQL printview headers.
    * header.inc.php: Avoid sending headers twice.

2004-01-22 Alexander M. Turek  <innocenteyes@derrabus.de>
    * libraries/dbi/mysqli.dbi.lib.php: Experimental new MySQLi library.
    * browse_foreigners.php, db_create.php, db_datadict.php,
      db_details_common.php, db_details_db_info.php, db_details_qbe.php,
      db_details_structure.php, db_printview.php, export.php, ldi_table.php,
      left.php, main.php, mult_submits.php, pdf_pages.php, pdf_schema.php,
      querywindow.php, read_dump.php, server_common.inc.php,
      server_privileges.php, server_processlist.php, server_status.php,
      server_variables.php, sql.php, tbl_addfield.php, tbl_alter.php,