@@ -37,6 +37,17 @@ if ($foreigners && isset($foreigners[$field])) {
                          . (($foreign_display == FALSE) ? '' :' ORDER BY ' . PMA_backquote($foreign_table) . '.' . PMA_backquote($foreign_display))
                          . (isset($foreign_limit) ? $foreign_limit : '');
         $disp            = PMA_DBI_query($dispsql);
+        if ($disp) {
+            // garvin: If a resultset has been created, pre-cache it in the $disp_row array
+            // This helps us from not needing to use mysql_data_seek by accessing a pre-cached
+            // PHP array. Usually those resultsets are not that big, so a performance hit should
+            // not be expected.
+            $disp_row = array();
+            while ($single_disp_row = @PMA_DBI_fetch_assoc($disp)) {
+                $disp_row[] = $single_disp_row;
+            }
+            @PMA_DBI_free_result($disp);
+        }
     }
     else {
         unset($disp);
