@@ -507,18 +507,18 @@ foreach($loop_array AS $vrowcount => $vrow) {
             </script>
             </td>
             <?php
-        } else if (isset($disp) && $disp) {
+        } else if (isset($disp_row) && is_array($disp_row)) {
             ?>
             <td bgcolor="<?php echo $bgcolor; ?>">
             <?php echo $backup_field . "\n"; ?>
             <input type="hidden" name="fields_type<?php echo $vkey; ?>[<?php echo urlencode($field); ?>]" value="foreign" />
             <input type="hidden" name="fields<?php echo $vkey; ?>[<?php echo urlencode($field); ?>]" value="" id="field_<?php echo $i; ?>_1" />
             <select name="field_<?php echo md5($field); ?><?php echo $vkey; ?>[]" <?php echo $chg_evt_handler; ?>="return unNullify('<?php echo urlencode($field); ?>', '<?php echo $vkey; ?>')" tabindex="<?php echo (($i * $m_rows) + 1); ?>" id="field_<?php echo ($i * $m_rows); ?>_3">
-                <?php echo PMA_foreignDropdown($disp, $foreign_field, $foreign_display, $data, 100); ?>
+                <?php echo PMA_foreignDropdown($disp_row, $foreign_field, $foreign_display, $data, 100); ?>
             </select>
             </td>
             <?php
-            unset($disp);
+            unset($disp_row);
         }
         else if ($cfg['LongtextDoubleTextarea'] && strstr($type, 'longtext')) {
             ?>
